<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/friendsFragment">

    <fragment
        android:id="@+id/friendsFragment"
        android:name="az.needforspeak.ui.register.friends.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/chatsFragment"
        android:name="az.needforspeak.ui.register.chats.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/marketFragment"
        android:name="az.needforspeak.ui.register.market.MarketFragment"
        android:label="@string/market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="az.needforspeak.ui.register.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />


</navigation>