<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_two_color"
    tools:context=".ui.unregister.LoginFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoImage"
            android:src="@drawable/ic_profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtName"
                android:inputType="text"
                android:hint="@string/name"
                android:textColorHint="@color/hint_color"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/plate_background" />

            <EditText
                android:id="@+id/txtsureName"
                android:inputType="text"
                android:hint="@string/surname"
                android:textColorHint="@color/hint_color"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/plate_background" />


            <EditText
                android:id="@+id/txtPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/plate_background" />

            <EditText
                android:id="@+id/txtPasswordConfirm"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/hint_color"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/plate_background" />

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:visibility="gone"
                android:maxLines="1"
                android:text="Passwords should match"
                android:textColor="@color/red"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnFinishRegister"
                android:text="@string/continue_"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:visibility="visible"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:layout_width="180dp"
                android:layout_height="35dp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>