<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_two_color">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/background_two_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:id="@+id/backArrow"
                android:visibility="visible"
                android:layout_width="50dp"
                android:layout_height="56dp"
                android:paddingStart="0dp"
                android:padding="16dp"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/bottom_icon_color" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:text="@string/registration"
                android:textColor="@color/bottom_icon_color"
                android:textFontWeight="700"
                android:textSize="24sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/logoImage"
            android:src="@drawable/logo_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:id="@+id/firstStepLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Your request will be sent for approval. Approval message will be received later"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <include android:id="@+id/plateInclude" layout="@layout/plate_input_layout" />


            <EditText
                android:id="@+id/phoneNumberInput"
                android:inputType="number|phone"
                android:hint="@string/phone_hint"
                android:textColorHint="@color/hint_color"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_width="210dp"
                android:layout_height="38dp"
                android:background="@drawable/plate_background"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/getCertificatePhotos"
                    android:text="@string/registration_certificates"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:layout_width="180dp"
                    android:layout_height="35dp"/>

                <ImageView
                    android:id="@+id/certificateCheck"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_select">

                </ImageView>
            </LinearLayout>

            <Button
                android:id="@+id/submitRegistration"
                android:text="Submit"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:visibility="visible"
                android:textAllCaps="false"
                android:enabled="false"
                android:alpha="0.5"
                android:background="@drawable/button_background"
                android:layout_width="210dp"
                android:layout_height="38dp"/>


        </LinearLayout>

    </LinearLayout>


</ScrollView>